Small change to sizing on skills and working on fixing issue with reverse feature card on mobile

--- a/src/styles/Index/Index.module.css
+++ b/src/styles/Index/Index.module.css
@@ -1,6 +1,6 @@
 .gridTesting {
   display: grid;
-  width: 70%;
+  width: 60%;
   justify-items : center;
   align-items: center;
   grid-template-columns: repeat(3, 1fr);
